--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,417 @@
-.App {
+.Burger {
+  width: 28px;
+  height: 12px;
+  margin-left: 14vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
+  cursor: pointer;
+}
+
+.mediaHome {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  height: 158px;
+  width: 38px;
+  top: 609.89px;
+  left: 1200px;
+  justify-content: space-between;
+}
+.mediaAbout {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  height: 158px;
+  width: 38px;
+  top: 1199.89px;
+  left: 1200px;
+  justify-content: space-between;
+}
+.mediaRoom {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  height: 158px;
+  width: 38px;
+  top: 2900px;
+  left: 1200px;
+  justify-content: space-between;
+}
+.mediaBar {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  height: 158px;
+  width: 38px;
+  top: 4050.89px;
+  left: 1200px;
+  justify-content: space-between;
+}
+
+#Booking {
+  height: 138px;
+  width: 100%;
+  background-color: #ffff;
+  position: absolute;
+  top: 1038px;
+  backdrop-filter: blur(34px);
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.welcome {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 26px;
+  line-height: 150%;
   text-align: center;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: #ffffff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.konyak {
+  width: 710px;
+  height: 276px;
+  top: 511.01px;
+  font-family: Ogg;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 92px;
+  line-height: 150%;
+  text-align: center;
+  text-transform: uppercase;
+  color: #ffffff;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.text {
+  position: absolute;
+  width: 710px;
+  height: 390px;
+  top: 250px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.arrival {
+  width: 250px;
+  height: 85.34px;
+}
+
+.departure {
+  width: 250px;
+  height: 85.34px;
+}
+
+.h6-text {
+  margin: 0px;
+  height: 21px;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 150%;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: #6f4f28;
+}
+.adults {
+  width: 120px;
+  height: 85.34px;
+}
+
+.children {
+  width: 120px;
+  height: 85.34px;
+}
+
+.prmotional-code {
+  width: 200px;
+  height: 85.34px;
+}
+
+.btn {
+  width: 150px;
+  height: 50px;
+  background: #6f4f28;
+  mix-blend-mode: normal;
+  margin-top: 34.66px;
+  border: 0.5px solid #6f4f28;
+  box-sizing: border-box;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.about {
+  position: absolute;
+  width: 600px;
+  height: 650px;
+  left: 162px;
+  top: 1380.5px;
+  background: rgba(255, 251, 248, 0.77);
+  backdrop-filter: blur(34px);
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  z-index: 1;
 }
 
-.App-link {
-  color: #61dafb;
+.about-title {
+  font-family: Ogg;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 40px;
+  line-height: 80px;
+  text-transform: uppercase;
+  color: #201b13;
+  text-align: center;
+}
+.line {
+  width: 80px;
+  height: 1.5px;
+  background-color: #6f4f28;
+}
+.about-text {
+  font-family: Forum;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 150%;
+  text-align: center;
+  color: #201b13;
+  text-justify: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.about-img1 {
+  position: absolute;
+  width: 400px;
+  height: 700px;
+  left: 730px;
+  top: 1318px;
+  background: url("https://s3-alpha-sig.figma.com/img/939e/a2a1/81a40aa838acab99b8be160e900c44ee?Expires=1626652800&Signature=deDgbd4rFJ9V55iA3ApEPIdXkQr5E1iOo1kXiJXT5SeOy9c0fRPJCRF8aitKMaX-p~ETvMURCFJD7yH6N6Ikk8mqcxKFJjzSCtmB1lyCOFEnPhTecJOha~nQrDYCsXqYr8HlnZelPZ1vLuBnX10DdWjBGwsDD9~CWIRApV4-Y9E~tCj08eGGtT3ZdXe9ROlGCo5PajiDH0VsP555wZ45BbtTOrVkZYgA4M8YoIR1n2vfARX3cc8pyQ70xSbcvYCbslfF7BTEz~NAALqz3nV-dbC8tAzIwP3U1mvp3DDb3Um-~sLaKrtzbHsbGEGDXiSfafvfhFYdSy7SBKoGbSMXhg__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-x: center;
+}
+.about-img2 {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  left: 980px;
+  top: 1800px;
+  background: url("https://s3-alpha-sig.figma.com/img/9e47/6792/2764841f56435980785b22224f0414be?Expires=1626652800&Signature=QKmLpTPuyVDPYAapOwL4t7g9qFupD22Sa1VT~wMTGzAdVfUa13XW39456jHTOUl3CFL9wkW4mJFnVrJkXTjjMfzZUMb0hOttbwOwmix~DIntuh5N4YXAP-IDeGgg8J9l55P76tFaR2eGgi99NHcjXXJMONKiFuJbq9MKfYG05Hi-CR5IXBWo7YIwGm6Cxd9r-9rvnO67YT9h7YCAhSXFquClDCojtQ8bqNKofXO51ei~PZmsVPRthcTpnFlnP8fSrT1~V0D6jyq30GVjQgL8m~Tfa7F1zwSW9WFJeMoADt0MoCPsHeTGAkNnSdG1vFAolUQHOMECp3iIY6HktvCW6w__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA");
+  border-radius: 0px 0px 350px 350px;
+  background-size: cover;
+  background-position: center;
+}
+
+.rooms {
+  position: absolute;
+  width: 600px;
+  height: 680px;
+  left: 162px;
+  top: 2250px;
+  background: rgba(255, 251, 248, 0.77);
+  backdrop-filter: blur(34px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 1;
+}
+
+.rooms-title {
+  height: 87px;
+  font-family: Ogg;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 56px;
+  line-height: 87px;
+  text-transform: uppercase;
+  color: #201b13;
+}
+.rooms-text {
+  font-family: Forum;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 170%;
+  text-align: center;
+  color: #201b13;
+  width: 550px;
+  height: 111px;
+}
+.h3 {
+  font-family: Ogg;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 36px;
+  line-height: 1px;
+  color: #201b13;
+}
+.rooms-img {
+  position: absolute;
+  width: 790px;
+  height: 500px;
+  left: 550px;
+  top: 2570px;
+  background: url("https://s3-alpha-sig.figma.com/img/3e3a/bc95/9cc3922f1d2a66df98775f35ad85ba83?Expires=1626652800&Signature=TGLGId7kQWNscv84gD4KwkTZf0UTNaGJf4BOqIMLahzwv3LB2UJJWh2sXvl9XIaDGlE7d62s6ztwkUlWLKzWRym5uiJxp3p5OAuRHrynXzlAeMv00hJtZpBI-macGyv2u8N~NEkfIlKDB~nw9l8rcWGShEpFbPOkMWBtz9pjonvH7uCN2pUOwTFNCKui9J8szTGXz4lwuBjo6Tx-3oxky-ppqwOpVobITDmM9vOxnAyrj7LYo~jDN6ou~hi6i~1GnWZuKgN2eDVxO85OWkjzoHghFfADJuxs9BNI0~RFP5UZk5UP-vzq-QPExZlgWMcbxdE40d9ZO~S1C-JaTin7ow__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.barWelcome {
+  position: absolute;
+  width: 292px;
+  height: 87px;
+  left: 161px;
+  top: 3373.32px;
+  font-family: Ogg;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 56px;
+  line-height: 87px;
+  color: #201b13;
+}
+.barTitle {
+  position: absolute;
+  width: 700px;
+  height: 87px;
+  left: 161px;
+  top: 3460.32px;
+  font-family: Ogg;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 56px;
+  line-height: 87px;
+  text-transform: uppercase;
+  color: #201b13;
+}
+.barLine-title {
+  position: absolute;
+  width: 80px;
+  height: 1.5px;
+  left: 162px;
+  top: 3650.32px;
+  background: #6f4f28;
+}
+.barImg1 {
+  width: 546px;
+  height: 595px;
+  background: url("https://s3-alpha-sig.figma.com/img/f3b4/da8c/7aba0ef09af7b27452c4b220a34f4374?Expires=1626652800&Signature=HQ6wC52gnitpHrwRR~3OEmssYW3v9oEJe0g4QB6kOAyNRYjr4UWPbjfB5Z9BmTtQRkC5230wTpsm5~HEkg4DH3RRJDJA~uoSZ5~7qvE1eBGh3xczY3rFPq3YBgzwjv9lRBAqqvLnQ949CbPk~JmNioL5cCzEmH3OPvP3gUE8bbyPPG36tIy0t44mufkNEjUpNPfP-5K6Sux7FxrWEiFvS4OdyhKxemC-tHVo2rcZ8XvEA2oGBwuJ1tO1Aq3q-5V1Cn05eYIedlWa2AWNhrYYXZyxAnjpGdqv6IXxohKPxeiPmKYzwvsMmbUR51L7e2jJyrlKfJWW1~LFqsrBVHV20Q__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.barImg2 {
+  width: 546px;
+  height: 595px;
+  margin-left: 20px;
+  background: url("https://s3-alpha-sig.figma.com/img/a051/663d/61adf294fa2674816f03e54ddaae6afe?Expires=1626652800&Signature=Knejzf4oDaxVRV07iQ7KK23ASqX1-~EJFMrVx4AjqdU6OZqQN92vN4ZSBmXNkcvPXY0XyP8TwT9LEKim8jkVlMwUC5mSQKuMebG7tLO60CM2znl-CzFODLri1mXL7UTVvFW6CPxAT3RiLA0XWDuoNTRzSHxWYFi5N8Ye2MeI0EIeCpIxdaqnCna~hoKc11-dzAhOWuej6DaI-AYiP5cUlxyLaNzjdXeSbH5hC5iHFixIW~ZzLzD2~UnAWZ3a~4Q9DwQjGhFQUHP02l0zhleax85FJrSNQ7~gXQlDKpT7rDMDI~amYO9qe66~~QWV0IYcGaBOs4tmyT4fKDUpXDmGDA__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.barImg3 {
+  width: 546px;
+  height: 595px;
+  margin-left: 20px;
+  background: url("https://s3-alpha-sig.figma.com/img/8392/72b3/d6a618873fddf1a50a6e468d08d34514?Expires=1626652800&Signature=fKNLMzbTxzO~jw3osNyDPsVCK-L2EAP8TGLroggpHTtfAOX1yHlEBPt2W-~JooljyI04aiCVF2JfrFZaGDLrdLWpXlPQxyqQVpm3hyUzrMm7yFOV3HDEy0JOv29E5vShcXz~upMQZj6KMnhC8YOyYjfYskgiOKwdl05J1EMW9ya5EBz7r52DPXdP~WHC9uPDuKVfbETEaEhq8Go9TclGf6sYaV8idgT83iXxPFK0g7r5oPSZh6a0fnJSQfFBKnomGFKXVuLdTOAqhSeFyQC3LUnf7kqAML8HeApC2mIovqMCxCD7Uv2BH7bC1iqbta37Ip4plv9GEUSMirU4SDwyPw__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.barImg4 {
+  width: 546px;
+  height: 595px;
+  margin-left: 20px;
+  background: url("https://s3-alpha-sig.figma.com/img/8392/72b3/d6a618873fddf1a50a6e468d08d34514?Expires=1626652800&Signature=fKNLMzbTxzO~jw3osNyDPsVCK-L2EAP8TGLroggpHTtfAOX1yHlEBPt2W-~JooljyI04aiCVF2JfrFZaGDLrdLWpXlPQxyqQVpm3hyUzrMm7yFOV3HDEy0JOv29E5vShcXz~upMQZj6KMnhC8YOyYjfYskgiOKwdl05J1EMW9ya5EBz7r52DPXdP~WHC9uPDuKVfbETEaEhq8Go9TclGf6sYaV8idgT83iXxPFK0g7r5oPSZh6a0fnJSQfFBKnomGFKXVuLdTOAqhSeFyQC3LUnf7kqAML8HeApC2mIovqMCxCD7Uv2BH7bC1iqbta37Ip4plv9GEUSMirU4SDwyPw__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.arrowLeft {
+  position: absolute;
+  width: 35px;
+  height: 0px;
+  left: 161px;
+  top: 4420.07px;
+  color: #6f4f28;
+  cursor: pointer;
+}
+.arrowRight {
+  position: absolute;
+  width: 55px;
+  height: 0px;
+  left: 237.39px;
+  top: 4420.07px;
+  transform: rotate(180deg);
+  color: #6f4f28;
+  cursor: pointer;
+}
+.barLine {
+  position: absolute;
+  width: 946px;
+  height: 1px;
+  left: 312px;
+  top: 4433.07px;
+  background: #6f4f28;
+  opacity: 0.2;
+}
+.page1 {
+  position: absolute;
+  width: 5px;
+  height: 27px;
+  left: 1220px;
+  top: 4400.7px;
+  font-family: Ogg;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 170%;
+  color: #6f4f28;
+}
+.slash {
+  position: absolute;
+  width: 6px;
+  height: 27px;
+  left: 1238px;
+  top: 4403.04px;
+  font-family: Ogg;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 170%;
+  color: #6f4f28;
+}
+.lastPage {
+  position: absolute;
+  width: 13px;
+  height: 27px;
+  left: 1245px;
+  top: 4407.7px;
+  font-family: Ogg;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 170%;
+  color: #6f4f28;
+  opacity: 0.2;
+}
+.small-line {
+  position: absolute;
+  width: 63px;
+  height: 0px;
+  left: 312px;
+  top: 4432.07px;
+  border: 1.5px solid #6f4f28;
+  background-color: #6f4f28;
 }
