--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
   height: 158px;
   width: 38px;
   top: 609.89px;
-  left: 1200px;
+  left: 88%;
   justify-content: space-between;
 }
 .mediaAbout {
@@ -26,7 +26,7 @@
   height: 158px;
   width: 38px;
   top: 1199.89px;
-  left: 1200px;
+  left: 88%;
   justify-content: space-between;
 }
 .mediaRoom {
@@ -36,7 +36,7 @@
   height: 158px;
   width: 38px;
   top: 2900px;
-  left: 1200px;
+  left: 88%;
   justify-content: space-between;
 }
 .mediaBar {
@@ -46,7 +46,7 @@
   height: 158px;
   width: 38px;
   top: 4050.89px;
-  left: 1200px;
+  left: 88%;
   justify-content: space-between;
 }
 
